--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-doc-generator",
-  "version": "1.2.5",
-  "description": "Generate a simple React Component documentation in Markdown.",
+  "name": "@beisen/react-doc-generator",
+  "version": "0.0.1",
+  "description": "",
   "main": "dist/index.js",
   "bin": {
     "react-doc-generator": "dist/react-doc-generator.js"
@@ -14,44 +14,15 @@
     "preversion": "npm run lint",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/marborkowski/react-doc-generator.git"
-  },
-  "author": "Marcin Borkowski",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/marborkowski/react-doc-generator/issues"
-  },
-  "homepage": "https://github.com/marborkowski/react-doc-generator#readme",
-  "keywords": [
-    "react",
-    "react-docgen",
-    "markdown",
-    "documentation",
-    "generator",
-    "tool",
-    "tools",
-    "docgen",
-    "readme file",
-    "readme",
-    "instruction",
-    "guide",
-    "list of components",
-    "components",
-    "spa",
-    "webpack",
-    "engine"
-  ],
   "dependencies": {
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "commander": "2.9.0",
     "handlebars": "^4.0.6",
     "node-dir": "^0.1.16",
-    "react": "^15.4.2",
+    "react": "^15.6.2",
     "react-docgen": "^2.13.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.6.2",
     "prop-types": "^15.6.0"
   },
   "devDependencies": {
@@ -66,19 +37,5 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.10.0",
     "jest-cli": "^19.0.2"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "jest": {
-    "roots": [
-      "src"
-    ],
-    "testRegex": "/__tests__/(.+?).test.js$"
   }
 }
